--- a/public/about.html
+++ b/public/about.html
@@ -42,6 +42,8 @@
       max-width: 600px;
     }
   </style>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"></noscript>
   <link rel="stylesheet" href="css/styles.css" media="print" onload="this.media='all'">
   <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
   <meta name="description" content="Learn more about WaterLogged, a localized rain gauge network for community science. Meet the team and explore our mission.">
