--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensure responsive design -->
   <title>Waterlogged</title> <!-- Page title -->
   <style>
-    /* Critical CSS for above-the-fold content */
+    /* Inline critical CSS */
     body {
       font-family: 'Roboto', sans-serif;
       margin: 0;
@@ -40,11 +40,30 @@
       color: #555;
       margin: 20px auto;
       max-width: 600px;
+      visibility: hidden; /* Prevent layout shift while font loads */
+    }
+    /* Inline critical Google Fonts CSS */
+    @font-face {
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url('https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxP.ttf') format('truetype');
+    }
+    @font-face {
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 700;
+      font-display: swap;
+      src: url('https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc9.ttf') format('truetype');
     }
   </style>
   <link rel="stylesheet" href="css/styles.css" media="print" onload="this.media='all'">
   <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"></noscript>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta name="description" content="WaterLogged: Building a localized rain gauge network for community science. Explore live weather data, rain gauge locations, and more.">
   <meta name="keywords" content="WaterLogged, rain gauge, community science, weather data, localized rainfall, Boston College">
   <meta name="author" content="WaterLogged Team">
@@ -65,8 +84,6 @@
     frame-src https://www.openstreetmap.org; 
     connect-src https://api.open-meteo.com;">
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"></noscript>
 </head>
 <body>
   <!-- Navigation menu -->
@@ -91,6 +108,12 @@
   <p class="subtitle" style="font-family: 'Roboto', sans-serif; font-size: 1.5rem; font-weight: 400; text-align: center; color: #555; margin: 20px auto; max-width: 600px;">
     Building a Localized Rain Gauge Network for Community Science.
   </p>
+  <script>
+    // Ensure font is applied as soon as it's available
+    document.fonts.ready.then(() => {
+      document.querySelector('.subtitle').style.visibility = 'visible';
+    });
+  </script>
 
   <!-- Main content -->
   <main>
@@ -101,7 +124,7 @@
         <div id="rain-data-placeholder" style="width: 100%; height: 300px; background-color: #f0f0f0; border-radius: 10px; display: flex; justify-content: center; align-items: center; color: #555;" role="img" aria-label="Graph placeholder for rain data">
           <picture>
             <source srcset="https://via.placeholder.com/600x300.webp?text=Graph+Placeholder" type="image/webp">
-            <img src="https://via.placeholder.com/600x300?text=Graph+Placeholder" alt="Graph Placeholder" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="https://via.placeholder.com/600x300.png?text=Graph+Placeholder" alt="Graph Placeholder" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.src='https://via.placeholder.com/600x300.png?text=Fallback+Image';">
           </picture>
         </div>
     </div>
@@ -128,14 +151,41 @@
     <div class="content-box">
         <p>Explore the locations of our rain gauges on the map below:</p>
         <div id="map-container" style="width: 100%; height: 400px; border-radius: 10px; overflow: hidden;">
+          <picture>
+            <source srcset="https://via.placeholder.com/800x400.webp?text=Static+Map" type="image/webp">
+            <img src="https://via.placeholder.com/800x400.png?text=Static+Map" alt="Static map showing rain gauge locations" style="width: 100%; height: 100%; object-fit: cover;">
+          </picture>
+          <noscript>
             <iframe 
-                src="https://www.openstreetmap.org/export/embed.html?bbox=-71.1912%2C42.3317%2C-71.1573%2C42.3519&layer=mapnik" 
-                style="width: 100%; height: 100%; border: none;" 
-                allowfullscreen 
-                loading="lazy" 
-                title="Interactive map showing rain gauge locations">
+              src="https://www.openstreetmap.org/export/embed.html?bbox=-71.1912%2C42.3317%2C-71.1573%2C42.3519&layer=mapnik" 
+              style="width: 100%; height: 100%; border: none;" 
+              allowfullscreen 
+              loading="lazy" 
+              title="Interactive map showing rain gauge locations">
             </iframe>
+          </noscript>
         </div>
+        <script defer>
+          document.addEventListener('DOMContentLoaded', () => {
+            const mapContainer = document.getElementById('map-container');
+            const observer = new IntersectionObserver((entries) => {
+              if (entries[0].isIntersecting) {
+                const iframe = document.createElement('iframe');
+                iframe.src = "https://www.openstreetmap.org/export/embed.html?bbox=-71.1912%2C42.3317%2C-71.1573%2C42.3519&layer=mapnik";
+                iframe.style.width = "100%";
+                iframe.style.height = "100%";
+                iframe.style.border = "none";
+                iframe.allowFullscreen = true;
+                iframe.loading = "lazy";
+                iframe.title = "Interactive map showing rain gauge locations";
+                mapContainer.innerHTML = ''; // Clear the static map
+                mapContainer.appendChild(iframe);
+                observer.disconnect(); // Stop observing once the iframe is loaded
+              }
+            });
+            observer.observe(mapContainer);
+          });
+        </script>
         <p><a href="https://www.openstreetmap.org/#map=15/42.3418/-71.1742" target="_blank">View Larger Map</a></p>
     </div>
   </main>
@@ -147,60 +197,7 @@
 
   <!-- JavaScript for menu toggle and dark mode -->
   <script defer src="/js/main.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        // Menu toggle functionality
-        const menuButton = document.getElementById('menu-button');
-        const menu = document.getElementById('menu');
-        if (menuButton && menu) {
-            menuButton.addEventListener('click', () => {
-                menu.classList.toggle('hidden'); // Toggle the "hidden" class
-                menu.style.display = menu.classList.contains('hidden') ? 'none' : 'block'; // Update display style
-                menu.setAttribute('aria-hidden', menu.classList.contains('hidden')); // Update aria-hidden attribute
-            });
-        } else {
-            console.error('Menu button or menu element not found.');
-        }
-
-        // Dark mode toggle functionality
-        const darkModeToggle = document.getElementById('dark-mode-toggle');
-        if (darkModeToggle) {
-            if (localStorage.getItem('darkMode') === 'enabled') {
-                document.body.classList.add('dark-mode');
-                document.querySelectorAll('header, nav, .content-box').forEach(el => {
-                    el.classList.add('dark-mode');
-                });
-            }
-
-            darkModeToggle.addEventListener('click', () => {
-                const isDarkMode = document.body.classList.toggle('dark-mode');
-                document.querySelectorAll('header, nav, .content-box').forEach(el => {
-                    el.classList.toggle('dark-mode');
-                });
-
-                // Save the user's preference in local storage
-                if (isDarkMode) {
-                    localStorage.setItem('darkMode', 'enabled');
-                } else {
-                    localStorage.setItem('darkMode', 'disabled');
-                }
-            });
-        } else {
-            console.error('Dark mode toggle button not found.');
-        }
-
-        // Lazy-load weather data fetching script
-        const weatherContainer = document.getElementById('weather-container');
-        if (weatherContainer) {
-          import('/js/weather.js').then(module => {
-            module.fetchWeather();
-          }).catch(err => {
-            console.error('Error loading weather script:', err);
-          });
-        }
-    });
-  </script>
-  <script>
+  <script defer>
     document.addEventListener('DOMContentLoaded', () => {
       const weatherContainer = document.getElementById('weather-container');
       if (weatherContainer) {
@@ -211,8 +208,6 @@
           .catch(err => {
             console.error('Error loading weather script:', err);
           });
-      } else {
-        console.error('Error: #weather-container element not found.');
       }
     });
   </script>
