--- a/public/about.html
+++ b/public/about.html
@@ -120,6 +120,19 @@
         <p style="text-align: center; margin-top: 5px; font-weight: bold;">Will</p>
       </div>
     </div>
+
+    <!-- Additional team section -->
+    <h2>Meet the Team</h2>
+    <div class="team-container">
+      <div class="team-box">
+        <img src="images/charlie.jpg" alt="Photo of Charlie" onerror="this.src='images/fallback.jpg';">
+        <p>Charlie</p>
+      </div>
+      <div class="team-box">
+        <img src="images/annie.jpg" alt="Photo of Annie" onerror="this.src='images/fallback.jpg';">
+        <p>Annie</p>
+      </div>
+    </div>
   </main>
 
   <!-- Contact footer -->
