--- a/public/index.html
+++ b/public/index.html
@@ -116,18 +116,18 @@
   <!-- Navigation menu -->
   <nav>
     <div id="menu-container">
-        <button id="menu-button" aria-label="Toggle navigation menu"> <!-- Added aria-label -->
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+      <button id="menu-button" aria-label="Toggle navigation menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
     </div>
-    <ul id="menu" class="hidden" aria-hidden="true"> <!-- Added aria-hidden -->
-        <li><a href="index.html" aria-label="Go to Home page">Home</a></li>
-        <li><a href="about.html" aria-label="Go to About page">About</a></li>
-        <li><a href="photos.html" aria-label="Go to Photos page">Photos</a></li>
+    <ul id="menu" class="hidden" aria-hidden="true">
+      <li><a href="index.html" aria-label="Go to Home page">Home</a></li>
+      <li><a href="about.html" aria-label="Go to About page">About</a></li>
+      <li><a href="photos.html" aria-label="Go to Photos page">Photos</a></li>
     </ul>
-    <span class="toolbar-title" aria-hidden="true">WATERLOGGED</span> <!-- Marked as decorative -->
+    <span class="toolbar-title" aria-hidden="true">WATERLOGGED</span>
     <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">Dark Mode</button>
   </nav>
 
@@ -214,19 +214,6 @@
           });
         </script>
         <p><a href="https://www.openstreetmap.org/#map=15/42.3418/-71.1742" target="_blank">View Larger Map</a></p>
-    </div>
-
-    <!-- Team Section -->
-    <h2>Meet the Team</h2>
-    <div class="team-container">
-      <div class="team-box">
-        <img src="images/charlie.jpg" alt="Photo of Charlie" onerror="this.src='images/fallback.jpg';">
-        <p>Charlie</p>
-      </div>
-      <div class="team-box">
-        <img src="images/annie.jpg" alt="Photo of Annie" onerror="this.src='images/fallback.jpg';">
-        <p>Annie</p>
-      </div>
     </div>
   </main>
 
