--- a/public/about.html
+++ b/public/about.html
@@ -62,18 +62,18 @@
   <!-- Navigation menu -->
   <nav>
     <div id="menu-container">
-      <button id="menu-button" aria-label="Toggle navigation menu"> <!-- Added aria-label -->
+      <button id="menu-button" aria-label="Toggle navigation menu">
         <span></span>
         <span></span>
         <span></span>
       </button>
     </div>
-    <ul id="menu" class="hidden" aria-hidden="true"> <!-- Added aria-hidden -->
+    <ul id="menu" class="hidden" aria-hidden="true">
       <li><a href="index.html" aria-label="Go to Home page">Home</a></li>
       <li><a href="about.html" aria-label="Go to About page">About</a></li>
       <li><a href="photos.html" aria-label="Go to Photos page">Photos</a></li>
     </ul>
-    <span class="toolbar-title" aria-hidden="true">WATERLOGGED</span> <!-- Marked as decorative -->
+    <span class="toolbar-title" aria-hidden="true">WATERLOGGED</span>
     <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">Dark Mode</button>
   </nav>
 
