--- a/public/index.html
+++ b/public/index.html
@@ -150,8 +150,8 @@
         <p>Coming soon: A detailed graph displaying our rain data collected from the WaterLogged network.</p>
         <div id="rain-data-placeholder" style="width: 100%; height: 300px; background-color: #f0f0f0; border-radius: 10px; display: flex; justify-content: center; align-items: center; color: #555;" role="img" aria-label="Graph placeholder for rain data">
           <picture>
-            <source srcset="https://via.placeholder.com/600x300.webp?text=Graph+Placeholder" type="image/webp">
-            <img src="https://via.placeholder.com/600x300.png?text=Graph+Placeholder" alt="Graph Placeholder" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.src='https://via.placeholder.com/600x300.png?text=Fallback+Image';">
+            <source srcset="images/graph-placeholder.webp" type="image/webp">
+            <img src="images/graph-placeholder.png" alt="Graph Placeholder" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.onerror=null; this.src='images/fallback.png';">
           </picture>
         </div>
     </div>
@@ -179,8 +179,8 @@
         <p>Explore the locations of our rain gauges on the map below:</p>
         <div id="map-container" style="width: 100%; height: 400px; border-radius: 10px; overflow: hidden;">
           <picture>
-            <source srcset="https://via.placeholder.com/800x400.webp?text=Static+Map" type="image/webp">
-            <img src="https://via.placeholder.com/800x400.png?text=Static+Map" alt="Static map showing rain gauge locations" style="width: 100%; height: 100%; object-fit: cover;">
+            <source srcset="images/map-placeholder.webp" type="image/webp">
+            <img src="images/map-placeholder.png" alt="Static map showing rain gauge locations" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.onerror=null; this.src='images/fallback.png';">
           </picture>
           <noscript>
             <iframe 
