--- a/public/index.html
+++ b/public/index.html
@@ -148,11 +148,8 @@
     <h2 id="rain-data-heading">WaterLogged Rain Data</h2> <!-- Added id for reference -->
     <div class="content-box" aria-labelledby="rain-data-heading"> <!-- Added aria-labelledby -->
         <p>Coming soon: A detailed graph displaying our rain data collected from the WaterLogged network.</p>
-        <div id="rain-data-placeholder" style="width: 100%; height: 300px; background-color: #f0f0f0; border-radius: 10px; display: flex; justify-content: center; align-items: center; color: #555;" role="img" aria-label="Graph placeholder for rain data">
-          <picture>
-            <source srcset="images/graph-placeholder.webp" type="image/webp">
-            <img src="images/graph-placeholder.png" alt="Graph Placeholder" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.onerror=null; this.src='images/fallback.png';">
-          </picture>
+        <div id="rain-data-placeholder" style="width: 100%; height: 300px; background-color: #f0f0f0; border-radius: 10px; display: flex; justify-content: center; align-items: center; color: #555; font-size: 1.5rem; font-weight: bold;" role="img" aria-label="Graph placeholder for rain data">
+          Data Coming Soon
         </div>
     </div>
 
@@ -223,6 +220,32 @@
   </footer>
 
   <!-- JavaScript for menu toggle and dark mode -->
-  <script defer src="/js/main.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const menuButton = document.getElementById('menu-button');
+        const menu = document.getElementById('menu');
+        if (menuButton && menu) {
+            menuButton.addEventListener('click', () => {
+                menu.classList.toggle('hidden');
+                menu.style.display = menu.classList.contains('hidden') ? 'none' : 'block';
+                menu.setAttribute('aria-hidden', menu.classList.contains('hidden'));
+            });
+        } else {
+            console.error('Menu button or menu element not found.');
+        }
+
+        const darkModeToggle = document.getElementById('dark-mode-toggle');
+        if (darkModeToggle) {
+            darkModeToggle.addEventListener('click', () => {
+                document.body.classList.toggle('dark-mode');
+                document.querySelectorAll('header, nav, .content-box').forEach(el => {
+                    el.classList.toggle('dark-mode');
+                });
+            });
+        } else {
+            console.error('Dark mode toggle button not found.');
+        }
+    });
+  </script>
 </body>
 </html>
