--- a/public/about.html
+++ b/public/about.html
@@ -108,15 +108,24 @@
         <p style="text-align: center; margin-top: 5px; font-weight: bold;">Annie</p>
       </div>
       <div class="team-box" data-name="Peyton" data-blurb="Environmental concentration. Interested in ecology, biology, manufacturing." data-image="images/peyton.jpg" style="margin-bottom: 20px;">
-        <img src="images/peyton.jpg" alt="Peyton - Environmental concentration, interested in ecology, biology, manufacturing" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+        <picture>
+          <source srcset="images/peyton.jpg" type="image/webp">
+          <img src="images/peyton.jpg" alt="Peyton - Environmental concentration, interested in ecology, biology, manufacturing" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+        </picture>
         <p style="text-align: center; margin-top: 5px; font-weight: bold;">Peyton</p>
       </div>
       <div class="team-box" data-name="Nava" data-blurb="Health concentration. Interested in BME / Medical Devices. Research." data-image="images/nava.jpg" style="margin-bottom: 20px;">
-        <img src="images/nava.jpg" alt="Nava - Health concentration, interested in BME / Medical Devices, Research" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+        <picture>
+          <source srcset="images/nava.jpg" type="image/webp">
+          <img src="images/nava.jpg" alt="Nava - Health concentration, interested in BME / Medical Devices, Research" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+        </picture>
         <p style="text-align: center; margin-top: 5px; font-weight: bold;">Nava</p>
       </div>
       <div class="team-box" data-name="Will" data-blurb="Environmental concentration. Interested in Biotech, BME, and Materials Science." data-image="images/will.png" style="margin-bottom: 20px;">
-        <img src="images/will.png" alt="Will - Environmental concentration, interested in Biotech, BME, and Materials Science" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+        <picture>
+          <source srcset="images/will.png" type="image/webp">
+          <img src="images/will.png" alt="Will - Environmental concentration, interested in Biotech, BME, and Materials Science" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+        </picture>
         <p style="text-align: center; margin-top: 5px; font-weight: bold;">Will</p>
       </div>
     </div>
